MOTECH-1861: Reworking startup of entities context to limit transactions
This should speed up MOTECH startup.